# aap-python

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  demo.py  pyproject.toml
src/aap/: __init__.py  address.py  client.py  conversations.py  did_web.py  discovery.py  encryption.py  envelope.py  envelope_policy.py  group_flow.py  host_policy.py  identity.py  inbound.py  jcs.py  keys.py  messages.py  payloads.py  pending_responses.py  relationships.py  service_followups.py  services.py  storage.py  transport.py  trusted_verifiers.py  verifier_client.py  verifiers.py
src/aap/stores/: attestations.py  consent.py  identity_bindings.py  outbound_contacts.py  (+5 more)
tests/: test_address.py  test_attestations.py  test_client.py  test_conformance.py  test_consent.py  test_conversations.py  test_did_web.py  test_discovery.py  test_encryption.py  test_envelope.py  test_envelope_policy.py  test_group_flow.py  test_group_payloads.py  test_host_policy.py  test_identity.py  test_identity_bindings.py  test_inbound.py  test_jcs.py  test_keys.py  test_messages.py  test_outbound_contacts.py  test_payloads.py  test_pending_introductions.py  test_pending_proposals.py  test_pending_responses.py  test_relationships.py  test_service_followups.py  test_service_request_groups.py  test_service_requests.py  test_services.py  test_services_payloads.py  test_smoke.py  test_storage.py  test_transport.py  test_trusted_verifiers.py  test_verification_flow.py  test_verification_payloads.py  test_verifier_client.py  test_verifiers.py
tests/vectors/: README.md  envelopes.json  regenerate.py
