[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentaddress"
dynamic = ["version"]
description = "Reference Python implementation of the Agent Address Protocol (AAP)."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Chris Evans" }]
keywords = ["aap", "agent", "did", "didcomm", "ed25519", "agents"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "cryptography>=42,<49",
  "jsonschema>=4.20",
  "rfc8785>=0.1",
  "httpx>=0.27",
  "pycryptodome>=3.23,<4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
  "ruff>=0.5",
]

[project.urls]
Homepage = "https://agentaddressprotocol.org"
Source = "https://github.com/agentaddress/aap-python"

[tool.hatch.version]
path = "src/aap/version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/aap"]

[tool.hatch.build.targets.sdist]
include = [
  "/CHANGELOG.md",
  "/LICENSE",
  "/README.md",
  "/SECURITY.md",
  "/demo.py",
  "/pyproject.toml",
  "/src",
  "/tests",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"
